removing unneeded files

--- a/book/getting-started.html
+++ b/book/getting-started.html
@@ -185,7 +185,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY\bin\solr create -c mechanical-pencils -d ?<br>
+    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY\bin\solr create -c mechanical-pencils -d ↩<br>
       PANL_INSTALL_DIRECTORY\solr\mechanical-pencils\ -s 2 -rf 2</span></p></td>
   </tr>
  </tbody>
@@ -200,7 +200,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c61"><span class="c12">SOLR_INSTALL_DIRECTORY/bin/solr create -c mechanical-pencils ?<br>
+    <p class="c61"><span class="c12">SOLR_INSTALL_DIRECTORY/bin/solr create -c mechanical-pencils ↩<br>
       -d PANL_INSTALL_DIRECTORY/solr/mechanical-pencils/ -s 2 -rf 2</span></p></td>
   </tr>
  </tbody>
@@ -224,7 +224,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY\bin\solr post -c mechanical-pencils ?<br>
+    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY\bin\solr post -c mechanical-pencils ↩<br>
       PANL_INSTALL_DIRECTORY\data\mechanical-pencils\mechanical-pencils.json</span></p></td>
   </tr>
  </tbody>
@@ -239,7 +239,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c61"><span class="c0">SOLR_INSTALL_DIRECTORY/bin/solr post -c mechanical-pencils ?</span></p>
+    <p class="c61"><span class="c0">SOLR_INSTALL_DIRECTORY/bin/solr post -c mechanical-pencils ↩</span></p>
     <p class="c61"><span class="c12">PANL_INSTALL_DIRECTORY/data/mechanical-pencils/mechanical-pencils.json</span></p></td>
   </tr>
  </tbody>
@@ -254,7 +254,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c12">PANL_INSTALL_DIRECTORY\bin\panl.bat -properties ? <br>
+    <p class="c82 c20"><span class="c12">PANL_INSTALL_DIRECTORY\bin\panl.bat -properties ↩ <br>
       PANL_INSTALL_DIRECTORY\panl\mechanical-properties\panl.properties</span></p></td>
   </tr>
  </tbody>
@@ -269,7 +269,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c12">PANL_INSTALL_DIRECTORY/bin/panl -properties ? &nbsp;<br>
+    <p class="c82 c20"><span class="c12">PANL_INSTALL_DIRECTORY/bin/panl -properties ↩ &nbsp;<br>
       PANL_INSTALL_DIRECTORY/panl/mechanical-properties/panl.propertie</span><span class="c12">s</span></p></td>
   </tr>
  </tbody>
@@ -359,9 +359,9 @@
   </tr>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c0">SOLR_INSTALL_DIRECTORY\bin\solr start -cloud -p 8983 ?</span></p>
+    <p class="c82 c20"><span class="c0">SOLR_INSTALL_DIRECTORY\bin\solr start -cloud -p 8983 ↩</span></p>
     <p class="c82 c20"><span class="c0">-s "example\cloud\node1\solr"</span></p>
-    <p class="c82 c158"><span class="c12">SOLR_INSTALL_DIRECTORY\bin\solr start -cloud -p 7574 ?<br>
+    <p class="c82 c158"><span class="c12">SOLR_INSTALL_DIRECTORY\bin\solr start -cloud -p 7574 ↩<br>
       -s "example\cloud\node2\solr" -z localhost:9983</span></p></td>
   </tr>
  </tbody>
@@ -373,9 +373,9 @@
   </tr>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c0">SOLR_INSTALL_DIRECTORY/bin/solr start -cloud -p 8983 ?</span></p>
+    <p class="c82 c20"><span class="c0">SOLR_INSTALL_DIRECTORY/bin/solr start -cloud -p 8983 ↩</span></p>
     <p class="c82 c20"><span class="c0">-s "example/cloud/node1/solr"</span></p>
-    <p class="c82 c158"><span class="c12">SOLR_INSTALL_DIRECTORY/bin/solr start -cloud -p 7574 ?<br>
+    <p class="c82 c158"><span class="c12">SOLR_INSTALL_DIRECTORY/bin/solr start -cloud -p 7574 ↩<br>
       -s "example/cloud/node2/solr" -z localhost:9983</span></p></td>
   </tr>
  </tbody>
