--- a/book/integrating-an-existing-solr-schema.html
+++ b/book/integrating-an-existing-solr-schema.html
@@ -125,7 +125,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">01</span></p></td>
    <td class="c96 c8" colspan="1" rowspan="1">
-    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.query' ?</span></p>
+    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.query' ↩</span></p>
     <p class="c34"><span class="c0">(The search query parameter), default [q]:</span></p></td>
   </tr>
   <tr class="c23">
@@ -138,7 +138,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">03</span></p></td>
    <td class="c40 c8" colspan="1" rowspan="1">
-    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.page' ?</span></p>
+    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.page' ↩</span></p>
     <p class="c34"><span class="c0">(The page number), default [p]:</span></p></td>
   </tr>
   <tr class="c23">
@@ -151,7 +151,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">05</span></p></td>
    <td class="c40 c8" colspan="1" rowspan="1">
-    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.numrows' ?</span></p>
+    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.numrows' ↩</span></p>
     <p class="c34"><span class="c0">(The number of results to return per page), default [n]:</span></p></td>
   </tr>
   <tr class="c23">
@@ -164,7 +164,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">07</span></p></td>
    <td class="c40 c8" colspan="1" rowspan="1">
-    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.sort' ?</span></p>
+    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.sort' ↩</span></p>
     <p class="c34"><span class="c0">(The results sorting parameter), default [s]:</span></p></td>
   </tr>
   <tr class="c23">
@@ -177,7 +177,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">09</span></p></td>
    <td class="c40 c8" colspan="1" rowspan="1">
-    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.operand' ?<br>
+    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.operand' ↩<br>
       (The default query operand (q.op)), default [o]:</span></p>
     <p class="c34"><span class="c0">Property 'panl.param.operand' set to default value of 'o'</span></p></td>
   </tr>
@@ -185,7 +185,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">10</span></p></td>
    <td class="c40 c8" colspan="1" rowspan="1">
-    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.passthrough' ?</span></p>
+    <p class="c34"><span class="c0">Enter the 1 character property value for 'panl.param.passthrough' ↩</span></p>
     <p class="c34"><span class="c0">(The URI path passthrough), default [z]:</span></p></td>
   </tr>
   <tr class="c23">
