--- a/book/panl-configuration.html
+++ b/book/panl-configuration.html
@@ -498,7 +498,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">01</span></p></td>
    <td class="c96 c8" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="brand" "type"="string" ?<br>
+    <p class="c82 c20"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="brand" "type"="string" ↩<br>
       "multiValued"="false" /&gt;</span></p></td>
   </tr>
   <tr class="c23">
@@ -625,7 +625,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">01</span></p></td>
    <td class="c96 c8" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="disassemble" "type"="boolean" ? "multiValued"="false" /&gt;</span></p></td>
+    <p class="c82 c20"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="disassemble" "type"="boolean" ↩ "multiValued"="false" /&gt;</span></p></td>
   </tr>
   <tr class="c23">
    <td class="c28" colspan="1" rowspan="1">
@@ -841,7 +841,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">01</span></p></td>
    <td class="c8 c162" colspan="1" rowspan="1">
-    <p class="c34"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="colours" "type"="string" ?</span></p>
+    <p class="c34"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="colours" "type"="string" ↩</span></p>
     <p class="c34"><span class="c0">&nbsp;"multiValued"="true" /&gt;</span></p></td>
   </tr>
  </tbody>
@@ -870,7 +870,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">01</span></p></td>
    <td class="c162 c8" colspan="1" rowspan="1">
-    <p class="c34"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="brand" "type"="string" ?</span></p>
+    <p class="c34"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="brand" "type"="string" ↩</span></p>
     <p class="c34"><span class="c0">&nbsp;"multiValued"="false" /&gt;</span></p></td>
   </tr>
  </tbody>
@@ -890,7 +890,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">01</span></p></td>
    <td class="c96 c8" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="brand" "type"="string" ?<br>
+    <p class="c82 c20"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="brand" "type"="string" ↩<br>
       "multiValued"="false" /&gt;</span></p></td>
   </tr>
   <tr class="c23">
@@ -1007,7 +1007,7 @@
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">01</span></p></td>
    <td class="c96 c8" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="weight" "type"="pint" ?</span></p>
+    <p class="c82 c20"><span class="c0"># &lt;field "indexed"="true" "stored"="true" "name"="weight" "type"="pint" ↩</span></p>
     <p class="c82 c20"><span class="c0">"multiValued"="false" /&gt;</span></p></td>
   </tr>
   <tr class="c23">
