--- a/book/readme-1st.html
+++ b/book/readme-1st.html
@@ -243,13 +243,13 @@
     <p class="c34 c62"><span class="c15">Tips:</span><span class="c5">&nbsp;Notes are within a black bordered box, with a lightbulb icon, and white background. &nbsp;This is something which is a handy idea to know for the functioning or configuration of the Panl or Solr servers.</span></p></td>
   </tr>
  </tbody>
-</table><p class="c18 c21"><span class="c5"></span></p><h3 class="c17" id="h.awxmtei1a6dk"><span class="c64 c15">Code Related Snippets</span></h3><p class="c18"><span>Inline code, or text related snippets are in monospaced text (</span><span class="c12 c8">Inconsolata 11pt</span><span>), and highlighted in grey, for example: </span><span class="c12 c8">/Caran+d'Ache/true/Black/bDW/</span></p><p class="c18"><span class="c5">This indicates that the text is exact and should be used as a reference.</span></p><p class="c82 c83"><span class="c5">For multi-line code related snippets they will be prefixed by a line number to be referenced with the text on a black-bordered grey box.</span></p><p class="c82 c83"><span>Note that within any line, there may be a line continuation character (</span><span class="c31">?</span><span class="c5">) which should not be included in the command. &nbsp;Unfortunately this means that it is a little more difficult to simply copy and paste the text - my apologies, however I chose readability and explanation of the text over cut-and-paste-ability.</span></p><a id="t.ae5f48fe618ca894e179b68a4ece54ac84810bb7"></a><a id="t.4"></a><table class="c1">
+</table><p class="c18 c21"><span class="c5"></span></p><h3 class="c17" id="h.awxmtei1a6dk"><span class="c64 c15">Code Related Snippets</span></h3><p class="c18"><span>Inline code, or text related snippets are in monospaced text (</span><span class="c12 c8">Inconsolata 11pt</span><span>), and highlighted in grey, for example: </span><span class="c12 c8">/Caran+d'Ache/true/Black/bDW/</span></p><p class="c18"><span class="c5">This indicates that the text is exact and should be used as a reference.</span></p><p class="c82 c83"><span class="c5">For multi-line code related snippets they will be prefixed by a line number to be referenced with the text on a black-bordered grey box.</span></p><p class="c82 c83"><span>Note that within any line, there may be a line continuation character (</span><span class="c31">↩</span><span class="c5">) which should not be included in the command. &nbsp;Unfortunately this means that it is a little more difficult to simply copy and paste the text - my apologies, however I chose readability and explanation of the text over cut-and-paste-ability.</span></p><a id="t.ae5f48fe618ca894e179b68a4ece54ac84810bb7"></a><a id="t.4"></a><table class="c1">
  <tbody>
   <tr class="c23">
    <td class="c28" colspan="1" rowspan="1">
     <p class="c9"><span class="c10 c15 c35">01</span></p></td>
    <td class="c96 c8" colspan="1" rowspan="1">
-    <p class="c34"><span class="c0"># The text file that may be included, with some information or processing ?<br>
+    <p class="c34"><span class="c0"># The text file that may be included, with some information or processing ↩<br>
       directives which will not fit on one line, so it includes the continuation marker</span></p></td>
   </tr>
   <tr class="c23">
@@ -265,7 +265,7 @@
     <p class="c34"><span class="c0"># this is another line of text</span></p></td>
   </tr>
  </tbody>
-</table><h3 class="c17" id="h.61iu9fl1sgd2"><span><br></span><span class="c64 c15">Commands</span></h3><p class="c82 c83"><span>Any commands that should be run in your terminal or command line prompt will appear in a formatted table. &nbsp;Note the '</span><span class="c31">?</span><span class="c5">' character which means a line continuation and should not be included in the command. &nbsp;(As per above with the copy and paste-ability of the lines).</span></p><a id="t.a6c18b0af749901f88866600df044c03dd61397b"></a><a id="t.5"></a><table class="c1">
+</table><h3 class="c17" id="h.61iu9fl1sgd2"><span><br></span><span class="c64 c15">Commands</span></h3><p class="c82 c83"><span>Any commands that should be run in your terminal or command line prompt will appear in a formatted table. &nbsp;Note the '</span><span class="c31">↩</span><span class="c5">' character which means a line continuation and should not be included in the command. &nbsp;(As per above with the copy and paste-ability of the lines).</span></p><a id="t.a6c18b0af749901f88866600df044c03dd61397b"></a><a id="t.5"></a><table class="c1">
  <thead>
   <tr class="c23">
    <td class="c85" colspan="1" rowspan="1">
@@ -276,7 +276,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c34"><span class="c12">\the\command\that\needs\to\be\run -with "a parameter" -and-another ?</span><span class="c12 c8"><br></span><span class="c0">"long parameter that may span many lines"</span></p></td>
+    <p class="c34"><span class="c12">\the\command\that\needs\to\be\run -with "a parameter" -and-another ↩</span><span class="c12 c8"><br></span><span class="c0">"long parameter that may span many lines"</span></p></td>
   </tr>
  </tbody>
 </table><h3 class="c17" id="h.293c7ey6hk7i"><span><br></span><span class="c64 c15">Links</span></h3><p class="c18"><span class="c5">Links are designated by underlining the text of the link. &nbsp;If the text is underlined, it is either an link to another section of this book, or to an external website.</span></p><p class="c18"><span>External links to websites (either local or remote) are in the standard blue underline and will </span><span class="c15">ALWAYS</span><span class="c5">&nbsp;match the URL that will open in your browser (i.e. The URLs are never truncated, even if they take multiple lines):</span></p><p class="c39 c67 c190"><span class="c47 c65"><a class="c2" href="http://localhost:8181/panl-results-viewer/">http://localhost:8181/panl-results-viewer/</a></span><span class="c5">&nbsp;</span></p><p class="c18"><span class="c5">Links within this documentation are bold, underlined, and in black text:</span></p><p class="c39 c201"><span class="c47 c15"><a class="c2" href="#">Generating The Panl Configuration Files</a></span></p><p class="c18 c21"><span class="c5"></span></p><a id="t.1bd04dd22abff5034bde03839f863c448712c36b"></a><a id="t.6"></a><table class="c1">
