--- a/book/the-panl-response-object.html
+++ b/book/the-panl-response-object.html
@@ -726,7 +726,7 @@
  <tbody>
   <tr class="c23">
    <td class="c60" colspan="1" rowspan="1">
-    <p class="c22"><span class="c10 c31"># &lt;field "indexed"="true" "stored"="true" "name"="brand" ?</span></p>
+    <p class="c22"><span class="c10 c31"># &lt;field "indexed"="true" "stored"="true" "name"="brand" ↩</span></p>
     <p class="c22"><span class="c10 c31">&nbsp; "type"="string" "multiValued"="false" /&gt;</span></p>
     <p class="c22"><span class="c10 c31">panl.facet.b=brand</span></p>
     <p class="c22"><span class="c10 c31">panl.name.b=Brand</span></p>
