--- a/book/quick-start---the-5-steps.html
+++ b/book/quick-start---the-5-steps.html
@@ -138,7 +138,7 @@
    <td class="c129" colspan="1" rowspan="1">
     <p class="c22"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 36.60px; height: 36.60px;"><img alt="" src="images/image1.png" style="width: 36.60px; height: 36.60px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p></td>
    <td class="c43" colspan="1" rowspan="1">
-    <p class="c34 c109"><span class="c15">IMPORTANT:</span><span>&nbsp;Each of the commands - either Windows or *NIX must be run on a single line - watch out for </span><span class="c31">?</span><span class="c5">&nbsp;continuations.</span></p></td>
+    <p class="c34 c109"><span class="c15">IMPORTANT:</span><span>&nbsp;Each of the commands - either Windows or *NIX must be run on a single line - watch out for </span><span class="c31">↩</span><span class="c5">&nbsp;continuations.</span></p></td>
   </tr>
  </tbody>
 </table><ol class="c4 lst-kix_jsvw9hlcraku-0">
@@ -170,7 +170,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY\bin\solr create -c mechanical-pencils -d ?<br>
+    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY\bin\solr create -c mechanical-pencils -d ↩<br>
       PANL_INSTALL_DIRECTORY\solr\mechanical-pencils\ -s 2 -rf 2</span></p></td>
   </tr>
  </tbody>
@@ -187,7 +187,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY\bin\solr post -c mechanical-pencils ?<br>
+    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY\bin\solr post -c mechanical-pencils ↩<br>
       PANL_INSTALL_DIRECTORY\data\mechanical-pencils\pencils.json</span></p></td>
   </tr>
  </tbody>
@@ -204,7 +204,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c12">PANL_INSTALL_DIRECTORY\bin\panl.bat -properties ? <br>
+    <p class="c82 c20"><span class="c12">PANL_INSTALL_DIRECTORY\bin\panl.bat -properties ↩ <br>
       PANL_INSTALL_DIRECTORY\panl\mechanical-properties\panl.properties</span></p></td>
   </tr>
  </tbody>
@@ -216,7 +216,7 @@
    <td class="c129" colspan="1" rowspan="1">
     <p class="c22"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 36.60px; height: 36.60px;"><img alt="" src="images/image1.png" style="width: 36.60px; height: 36.60px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p></td>
    <td class="c43" colspan="1" rowspan="1">
-    <p class="c34 c109"><span class="c15">IMPORTANT:</span><span>&nbsp;Each of the commands - either Windows or *NIX must be run on a single line - watch out for </span><span class="c31">?</span><span class="c5">&nbsp;continuations.</span></p></td>
+    <p class="c34 c109"><span class="c15">IMPORTANT:</span><span>&nbsp;Each of the commands - either Windows or *NIX must be run on a single line - watch out for </span><span class="c31">↩</span><span class="c5">&nbsp;continuations.</span></p></td>
   </tr>
  </tbody>
 </table><ol class="c4 lst-kix_34p78y9wvap-0 start" start="1">
@@ -248,7 +248,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY/bin/solr create -c mechanical-pencils -d ?<br>
+    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY/bin/solr create -c mechanical-pencils -d ↩<br>
       PANL_INSTALL_DIRECTORY/solr/mechanical-pencils/ -s 2 -rf 2</span></p></td>
   </tr>
  </tbody>
@@ -265,7 +265,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY/bin/solr post -c mechanical-pencils ?<br>
+    <p class="c82 c20"><span class="c12">SOLR_INSTALL_DIRECTORY/bin/solr post -c mechanical-pencils ↩<br>
       PANL_INSTALL_DIRECTORY/data/mechanical-pencils/mechanical-pencils.json</span></p></td>
   </tr>
  </tbody>
@@ -282,7 +282,7 @@
  <tbody>
   <tr class="c23">
    <td class="c50" colspan="1" rowspan="1">
-    <p class="c22 c103"><span class="c12">PANL_INSTALL_DIRECTORY/bin/panl -properties ? <br>
+    <p class="c22 c103"><span class="c12">PANL_INSTALL_DIRECTORY/bin/panl -properties ↩ <br>
       PANL_INSTALL_DIRECTORY/panl/mechanical-properties/panl.properties</span></p></td>
   </tr>
  </tbody>
