fixed footnotes and original document

--- a/src/main/resources/template.html
+++ b/src/main/resources/template.html
@@ -100,7 +100,7 @@
 					<p>
 						This page was converted from an exported HTML page including styling,
 						which has interfered with the overall page style, and <strong>page numbering
-						will not be correct, and you will miss out on my delightful footnotes.</strong>
+						will not be correct.</strong>
 					</p>
 					<hr/>
 					<section>
