changed file encoding

--- a/book/index.html
+++ b/book/index.html
@@ -90,7 +90,7 @@
 	</nav>
 </div>
 <section id="banner"><h2>Welcome to the Panl Book</h2>
-	<p>A rather pleasing companion to the ApacheÂ® SolrÂ® Faceted Search Engine.</p></section>
+	<p>A rather pleasing companion to the Apache® Solr® Faceted Search Engine.</p></section>
 <section id="main">
 	<div class="container">
 		<div class="row 200%">
@@ -119,7 +119,7 @@
 			</div>
 			<div class="8u$ 12u$(medium) important(medium)">
 				<section id="content">
-					<p class="c48 c24 c168 title" id="h.er0e582l5y3r"><span>Getting Started With </span><span>Panl</span><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 540.00px; height: 242.00px;"><img alt="" src="images/image13.png" style="width: 540.00px; height: 242.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p><p class="c48 c24 c174 subtitle" id="h.p5uqou4uanw0"><span>A rather pleasing</span><span>&nbsp;companion to the Apache</span><span class="c144">®</span><span>&nbsp;Solr</span><span class="c144">®</span><span class="c55 c146 c115 c7">&nbsp;Faceted Search Engine</span></p><p class="c36 c24"><span class="c146 c7">_____________</span></p><p class="c48 c24 c118 subtitle" id="h.goxd7kpxzjw3"><span>Author: Synapticloop</span></p><p class="c22 c24"><span>Because </span><span class="c19 c15">/Caran+d'Ache/true/Black/bDW/</span><span class="c2 c15 c10">&nbsp;looks nicer than</span></p><p class="c22"><span class="c19 c15">q=*:*&amp;facet.mincount=1&amp;rows=10&amp;facet.field=lead_size_indicator&amp;facet.field=grip_material&amp;f<br>
+					<p class="c48 c24 c168 title" id="h.er0e582l5y3r"><span>Getting Started With </span><span>Panl</span><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 540.00px; height: 242.00px;"><img alt="" src="images/image13.png" style="width: 540.00px; height: 242.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p><p class="c48 c24 c174 subtitle" id="h.p5uqou4uanw0"><span>A rather pleasing</span><span>&nbsp;companion to the Apache</span><span class="c144">Â®</span><span>&nbsp;Solr</span><span class="c144">Â®</span><span class="c55 c146 c115 c7">&nbsp;Faceted Search Engine</span></p><p class="c36 c24"><span class="c146 c7">_____________</span></p><p class="c48 c24 c118 subtitle" id="h.goxd7kpxzjw3"><span>Author: Synapticloop</span></p><p class="c22 c24"><span>Because </span><span class="c19 c15">/Caran+d'Ache/true/Black/bDW/</span><span class="c2 c15 c10">&nbsp;looks nicer than</span></p><p class="c22"><span class="c19 c15">q=*:*&amp;facet.mincount=1&amp;rows=10&amp;facet.field=lead_size_indicator&amp;facet.field=grip_material&amp;f<br>
   acet.field=colours&amp;facet.field=nib_shape&amp;facet.field=diameter&amp;facet.field=cap_shape&amp;facet.<br>
   field=brand&amp;facet.field=mechanism_type&amp;facet.field=length&amp;facet.field=hardness_indicator&amp;f<br>
   acet.field=grip_type&amp;facet.field=cap_material&amp;facet.field=lead_grade_indicator&amp;facet.field<br>
