--- a/book/the-panl-response-object.html
+++ b/book/the-panl-response-object.html
@@ -90,7 +90,7 @@
 	</nav>
 </div>
 <section id="banner"><h2>Welcome to the Panl Book</h2>
-	<p>A rather pleasing companion to the ApacheÂ® SolrÂ® Faceted Search Engine.</p></section>
+	<p>A rather pleasing companion to the Apache® Solr® Faceted Search Engine.</p></section>
 <section id="main">
 	<div class="container">
 		<div class="row 200%">
@@ -726,7 +726,7 @@
  <tbody>
   <tr class="c16">
    <td class="c155" colspan="1" rowspan="1">
-    <p class="c31"><span class="c2 c28 c15"># &lt;field "indexed"="true" "stored"="true" "name"="brand" &amp;?</span></p>
+    <p class="c31"><span class="c2 c28 c15"># &lt;field "indexed"="true" "stored"="true" "name"="brand" â†©</span></p>
     <p class="c31"><span class="c2 c28 c15">&nbsp; "type"="string" "multiValued"="false" /&gt;</span></p>
     <p class="c31"><span class="c2 c28 c15">panl.facet.b=brand</span></p>
     <p class="c31"><span class="c2 c28 c15">panl.name.b=Brand</span></p>
