--- a/book/properties-quick-reference.html
+++ b/book/properties-quick-reference.html
@@ -90,7 +90,7 @@
 	</nav>
 </div>
 <section id="banner"><h2>Welcome to the Panl Book</h2>
-	<p>A rather pleasing companion to the ApacheÂ® SolrÂ® Faceted Search Engine.</p></section>
+	<p>A rather pleasing companion to the Apache® Solr® Faceted Search Engine.</p></section>
 <section id="main">
 	<div class="container">
 		<div class="row 200%">
