--- a/book/why-synapticloop-panl-.html
+++ b/book/why-synapticloop-panl-.html
@@ -81,7 +81,9 @@
 		  border: 1px solid #aaa;
 		  margin: 12px 0;
 		}
-		.next-page { float: right; }
+
+		table tbody td:nth-child(2) p { border-left: 0; }
+		table { border-collapse: separate !important; }
 	</style>
 </head>
 <body>
