--- a/book/how-it-all-fits-together.html
+++ b/book/how-it-all-fits-together.html
@@ -68,7 +68,7 @@
 			text-shadow: 1px 1px 0 #444, -1px 1px 0 #444, -1px -1px 0 #444, 1px -1px 0 #444;
 		}
 
-		#sidebar section a, #sidebar section h1 {
+		#sidebar section a, #sidebar section h1, #sidebar section h2 {
 			text-align: left;
 		}
 		#sidebar hr {
@@ -92,7 +92,7 @@
 	</nav>
 </div>
 <section id="banner"><h2>Welcome to the Panl Book</h2>
-	<p>A rather pleasing companion to the Apache® Solr® Faceted Search Engine.</p></section>
+	<p>A rather pleasing companion to the Apache&reg; Solr&reg; Faceted Search Engine.</p></section>
 <section id="main">
 	<div class="container">
 		<div class="row 200%">
